INT-20856 theme_snap: Fix spacing page-course-reset

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1694,6 +1694,10 @@ body.contains-snap-custom_menu-spacer {
     max-width: 100%;
 }
 
+#page-course-reset #region-main {
+    max-width: 100%;
+}
+
 #page-course-view-topics #region-main, #page-course-view-weeks #region-main {
     padding: 1em 0;
 }
